Bug 1791024: Make focus ring use Canvastext and Selecteditem when HCM is enabled r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D189849